@@ -1,194 +1,262 @@
 package com.project.back_end.services;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Service;
+
 import com.project.back_end.DTO.Login;
 import com.project.back_end.models.Appointment;
 import com.project.back_end.models.Doctor;
-import com.project.back_end.repo.DoctorRepository;
 import com.project.back_end.repo.AppointmentRepository;
-import org.springframework.stereotype.Service;
-import org.springframework.http.ResponseEntity;
+import com.project.back_end.repo.DoctorRepository;
 
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.*;
+import jakarta.transaction.Transactional;
 
 @Service
 public class DoctorService {
 
     private final DoctorRepository doctorRepository;
+
     private final AppointmentRepository appointmentRepository;
+
     private final TokenService tokenService;
 
-    public DoctorService(
-            DoctorRepository doctorRepository,
-            AppointmentRepository appointmentRepository,
-            TokenService tokenService
-    ) {
+    public DoctorService(DoctorRepository doctorRepository, AppointmentRepository appointmentRepository,
+                         TokenService tokenService) {
         this.doctorRepository = doctorRepository;
         this.appointmentRepository = appointmentRepository;
         this.tokenService = tokenService;
     }
 
+
+    @Transactional
     public List<String> getDoctorAvailability(Long doctorId, LocalDate date) {
+        Optional<Doctor> doctor = doctorRepository.findById(doctorId);
 
-        Optional<Doctor> doctorOpt = doctorRepository.findById(doctorId);
-        if (doctorOpt.isEmpty()) return Collections.emptyList();
+        if (doctor.isEmpty()) {
+            return List.of("Doctor not found with ID: " + doctorId);
+        }
 
-        Doctor doctor = doctorOpt.get();
+        List<String> availableSlots = doctor.get().getAvailableTimes().stream()
+                .map(Object::toString)
+                .collect(Collectors.toList());
 
-        LocalDateTime start = date.atStartOfDay();
-        LocalDateTime end = date.atTime(23, 59, 59);
+        // Convert LocalDate to LocalDateTime (start and end of the day)
+        LocalDateTime startOfDay = date.atStartOfDay();
+        LocalDateTime endOfDay = date.atTime(LocalTime.MAX);
 
-        List<Appointment> bookedAppointments =
-                appointmentRepository.findByDoctorIdAndAppointmentTimeBetween(
-                        doctorId, start, end
-                );
+        // Fetch the appointments for this doctor on the given date
+        List<Appointment> appointments = appointmentRepository.findByDoctorIdAndAppointmentTimeBetween(doctorId,
+                startOfDay, endOfDay);
 
-        List<String> bookedTimes = bookedAppointments.stream()
-                .map(a -> a.getAppointmentTime().toLocalTime().toString())
-                .toList();
+        // Set of booked slots for the doctor on this date
+        Set<String> bookedSlots = appointments.stream()
+                .map(appt -> {
+                    LocalDateTime start = appt.getAppointmentTime();
+                    LocalDateTime end = start.plusHours(1); // Add 1 hour to the start time to get the end time
+                    return formatSlot(start, end); // Format the slot as "HH:mm-HH:mm"
+                })
+                .collect(Collectors.toSet());
 
-        List<String> available = new ArrayList<>(doctor.getAvailableTimes());
-        available.removeIf(slot -> bookedTimes.stream().anyMatch(slot::contains));
+        // Filter out booked slots from the available slots
+        return availableSlots.stream()
+                .filter(slot -> !bookedSlots.contains(slot))
+                .collect(Collectors.toList());
+    }
 
-        return available;
+    private String formatSlot(LocalDateTime start, LocalDateTime end) {
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("HH:mm");
+        return start.format(formatter) + "-" + end.format(formatter);
     }
 
     public int saveDoctor(Doctor doctor) {
-        try {
-            Doctor existing = doctorRepository.findByEmail(doctor.getEmail());
-            if (existing != null) return -1;
 
+        // success: 1, conflict:-1, internal error: 0
+        Doctor result = doctorRepository.findByEmail(doctor.getEmail());
+
+        if (result != null) {
+            return -1;
+        }
+        try {
             doctorRepository.save(doctor);
             return 1;
         } catch (Exception e) {
+            System.err.println("Error saving doctor: " + e.getMessage());
             return 0;
         }
+
     }
 
     public int updateDoctor(Doctor doctor) {
+        // success: 1, conflict:-1, internal error: 0
+        Optional<Doctor> result = doctorRepository.findById(doctor.getId());
+        if (!result.isPresent()) {
+            return -1;
+        }
         try {
-            Optional<Doctor> existing = doctorRepository.findById(doctor.getId());
-            if (existing.isEmpty()) return -1;
-
             doctorRepository.save(doctor);
             return 1;
         } catch (Exception e) {
+            System.err.println("Error saving doctor: " + e.getMessage());
             return 0;
         }
+
     }
 
+    @Transactional
     public List<Doctor> getDoctors() {
-        return doctorRepository.findAll();
+        List<Doctor> doctors = doctorRepository.findAll();
+        // Optionally touch the collection to force loading:
+        doctors.forEach(doc -> doc.getAvailableTimes().size());
+        return doctors;
     }
 
     public int deleteDoctor(long id) {
-        try {
-            Optional<Doctor> doctor = doctorRepository.findById(id);
-            if (doctor.isEmpty()) return -1;
+        Optional<Doctor> doctor = doctorRepository.findById(id);
 
-            appointmentRepository.deleteAllByDoctorId(id);
-            doctorRepository.deleteById(id);
+        if (!doctor.isPresent()) {
+            return -1;
+        }
+        try {
+            appointmentRepository.deleteAllByDoctorId(doctor.get().getId());
+            doctorRepository.delete(doctor.get());
             return 1;
         } catch (Exception e) {
+            System.err.println("Error saving doctor: " + e.getMessage());
             return 0;
         }
     }
 
     public ResponseEntity<Map<String, String>> validateDoctor(Login login) {
+        Map<String, String> map = new HashMap<>();
+        try {
 
-        Map<String, String> response = new HashMap<>();
+            Doctor doctor = doctorRepository.findByEmail(login.getEmail());
+            if (doctor != null) {
+                if (doctor.getPassword().equals(login.getPassword())) {
+                    map.put("token", tokenService.generateToken(doctor.getEmail()));
+                    return ResponseEntity.status(HttpStatus.OK).body(map);
+                } else {
+                    map.put("error", "Password does not match");
+                    return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(map);
+                }
+            }
+            map.put("error", "invalid email id");
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(map);
 
-        Doctor doctor = doctorRepository.findByEmail(login.getEmail());
-
-        if (doctor == null || !doctor.getPassword().equals(login.getPassword())) {
-            response.put("message", "Invalid email or password");
-            return ResponseEntity.badRequest().body(response);
+        } catch (Exception e) {
+            System.out.println("Error: " + e);
+            map.put("error", "Internal Server error");
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(map);
         }
-
-        String token = tokenService.generateToken(login.getEmail());
-        response.put("token", token);
-        response.put("message", "Login successful");
-
-        return ResponseEntity.ok(response);
     }
 
+    @Transactional
     public Map<String, Object> findDoctorByName(String name) {
-        Map<String, Object> result = new HashMap<>();
-        List<Doctor> doctors = doctorRepository.findByNameLike("%" + name + "%");
-        result.put("doctors", doctors);
-        return result;
+        Map<String, Object> map = new HashMap<>();
+        List<Doctor> doctorList = doctorRepository.findByNameLike(name);
+        doctorList.forEach(doc -> doc.getAvailableTimes().size());
+        map.put("doctors", doctorList);
+        return map;
     }
 
+    @Transactional
     public Map<String, Object> filterDoctorsByNameSpecilityandTime(String name, String specialty, String amOrPm) {
-        List<Doctor> doctors =
-                doctorRepository.findByNameContainingIgnoreCaseAndSpecialtyIgnoreCase(name, specialty);
+        Map<String, Object> map = new HashMap<>();
 
-        doctors = filterDoctorByTime(doctors, amOrPm);
+        List<Doctor> doctors = doctorRepository.findByNameContainingIgnoreCaseAndSpecialtyIgnoreCase(name, specialty);
 
-        Map<String, Object> result = new HashMap<>();
-        result.put("doctors", doctors);
-        return result;
+        List<Doctor> filteredDoctors = filterDoctorByTime(doctors,amOrPm);
+
+        map.put("doctors", filteredDoctors);
+        return map;
     }
 
+    @Transactional
     public Map<String, Object> filterDoctorByNameAndTime(String name, String amOrPm) {
-        List<Doctor> doctors = doctorRepository.findByNameLike("%" + name + "%");
+        Map<String, Object> map = new HashMap<>();
 
-        doctors = filterDoctorByTime(doctors, amOrPm);
+        // Step 1: Fetch by name (partial match)
+        List<Doctor> doctors = doctorRepository.findByNameLike(name);
 
-        Map<String, Object> result = new HashMap<>();
-        result.put("doctors", doctors);
-        return result;
+        // Step 2: Filter by AM/PM
+        List<Doctor> filteredDoctors = filterDoctorByTime(doctors,amOrPm);
+
+        map.put("doctors", filteredDoctors);
+        return map;
     }
 
-    public Map<String, Object> filterDoctorByNameAndSpecility(String name, String specialty) {
-        Map<String, Object> result = new HashMap<>();
-
-        List<Doctor> doctors =
-                doctorRepository.findByNameContainingIgnoreCaseAndSpecialtyIgnoreCase(name, specialty);
-
-        result.put("doctors", doctors);
-        return result;
+    @Transactional
+    public Map<String, Object> filterDoctorByNameAndSpecility(String name, String specilty) {
+        Map<String, Object> map = new HashMap<>();
+        List<Doctor> doctorList = doctorRepository.findByNameContainingIgnoreCaseAndSpecialtyIgnoreCase(name, specilty);
+        doctorList.forEach(doc -> doc.getAvailableTimes().size());
+        map.put("doctors", doctorList);
+        return map;
     }
 
-    public Map<String, Object> filterDoctorByTimeAndSpecility(String specialty, String amOrPm) {
-        List<Doctor> doctors = doctorRepository.findBySpecialtyIgnoreCase(specialty);
+    @Transactional
+    public Map<String, Object> filterDoctorByTimeAndSpecility(String specilty, String amOrPm) {
+        Map<String, Object> map = new HashMap<>();
+        List<Doctor> doctors = doctorRepository.findBySpecialtyIgnoreCase(specilty);
+        List<Doctor> filteredDoctors = filterDoctorByTime(doctors,amOrPm);
+        map.put("doctors", filteredDoctors);
+        return map;
 
-        doctors = filterDoctorByTime(doctors, amOrPm);
-
-        Map<String, Object> result = new HashMap<>();
-        result.put("doctors", doctors);
-        return result;
     }
 
-    public Map<String, Object> filterDoctorBySpecility(String specialty) {
-        Map<String, Object> result = new HashMap<>();
-
-        List<Doctor> doctors = doctorRepository.findBySpecialtyIgnoreCase(specialty);
-
-        result.put("doctors", doctors);
-        return result;
+    @Transactional
+    public Map<String, Object> filterDoctorBySpecility(String specilty) {
+        Map<String, Object> map = new HashMap<>();
+        List<Doctor> doctorList = doctorRepository.findBySpecialtyIgnoreCase(specilty);
+        doctorList.forEach(doc -> doc.getAvailableTimes().size());
+        map.put("doctors", doctorList);
+        return map;
     }
 
+    @Transactional
     public Map<String, Object> filterDoctorsByTime(String amOrPm) {
+        Map<String, Object> map = new HashMap<>();
         List<Doctor> doctors = doctorRepository.findAll();
-
-        doctors = filterDoctorByTime(doctors, amOrPm);
-
-        Map<String, Object> result = new HashMap<>();
-        result.put("doctors", doctors);
-        return result;
+        List<Doctor> filteredDoctors = filterDoctorByTime(doctors,amOrPm);
+        map.put("doctors", filteredDoctors);
+        return map;
     }
 
-    private List<Doctor> filterDoctorByTime(List<Doctor> doctors, String amOrPm) {
-        if (amOrPm == null) return doctors;
 
-        String keyword = amOrPm.equalsIgnoreCase("AM") ? "AM" : "PM";
-
+    public  List<Doctor> filterDoctorByTime(List<Doctor> doctors,String amOrPm)
+    {
         return doctors.stream()
-                .filter(d -> d.getAvailableTimes() != null &&
-                        d.getAvailableTimes().stream().anyMatch(t -> t.contains(keyword)))
-                .toList();
-    }
-}
+                .filter(doctor -> {
+                    if (amOrPm == null || amOrPm.isBlank())
+                        return true;
 
+                    boolean isAM = amOrPm.equalsIgnoreCase("am");
+                    return doctor.getAvailableTimes().stream().anyMatch(slot -> {
+                        try {
+                            String startHourStr = slot.split("-")[0].split(":")[0]; // e.g. "09"
+                            int hour = Integer.parseInt(startHourStr);
+                            return isAM ? hour < 12 : hour >= 12;
+                        } catch (Exception e) {
+                            return false; // Skip invalid time slots
+                        }
+                    });
+                })
+                .collect(Collectors.toList());
+    }
+
+
+
+
+}
